--- a/Product-card/index.html
+++ b/Product-card/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
+    
+    <!-- import packed icon  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -17,15 +18,21 @@
         <div class="card_cart">
             <i class='bx bx-cart-alt'></i>
         </div>
+
+        <!-- product image -->
         <div class="card_img">
             <img src="Nike Zoom KD 12.png" alt="">
         </div>
+
+        <!-- product title & price -->
         <div class="card_title">
             Nike Zoom KD 12
         </div>
         <div class="card_price">
             $99
         </div>
+
+        <!-- product size -->
         <div class="card_size">
             <h3>
                 Size:
@@ -35,12 +42,16 @@
             <span>8</span>
             <span>9</span>
         </div>
+
+        <!-- product color -->
         <div class="card_color">
             <h3>Color:</h3>
             <span class="card_color--green"></span>
             <span class="card_color--red"></span>
             <span class="card_color--black"></span>
         </div>
+
+        <!-- button action -->
         <div class="card_action">
             <button>Buy Now</button>
             <button>Add Cart</button>
